--- a/src/app/components/edit-recipe/edit-recipe.component.scss
+++ b/src/app/components/edit-recipe/edit-recipe.component.scss
@@ -20,4 +20,14 @@
 .editRecipe{
     width: 450px;
     height: auto;
+    width: 40px;
+}
+
+#descriptionTextArea{
+    width: 30vw;
+    height: 8vw;
+}
+
+#nameText{
+    width: 30vw;
 }
