--- a/src/app/components/edit-recipe/edit-recipe.component.html
+++ b/src/app/components/edit-recipe/edit-recipe.component.html
@@ -47,4 +47,5 @@
         </mat-form-field>
             <div class="buttonDiv" (click)="addIngredient()"><i class="fa fa-plus" aria-hidden="true"></i></div>
     </div>
+    <div class="buttonDiv" (click)="closeEditRecipe()">CloseEdit</div>
 </div>
