--- a/src/app/components/show-recipe/show-recipe.component.html
+++ b/src/app/components/show-recipe/show-recipe.component.html
@@ -18,6 +18,7 @@
                 </div>
             </mat-list-item>
         </mat-list>
+        <div class="buttonDiv"(click)="changeToEditMode()">Edit</div>
     </mat-card>
     </div>
 </div>
