Add Update button to edit-recipe.component

--- a/src/app/components/edit-recipe/edit-recipe.component.scss
+++ b/src/app/components/edit-recipe/edit-recipe.component.scss
@@ -31,3 +31,12 @@
 #nameText{
     width: 30vw;
 }
+
+.wrapperDiv{
+    display:flex;
+}
+
+.buttonUpdate{
+    margin-left: 8vw;
+    cursor: pointer;
+}
