Add modal component

--- a/src/app/components/edit-recipe/edit-recipe.component.html
+++ b/src/app/components/edit-recipe/edit-recipe.component.html
@@ -48,7 +48,7 @@
             <div class="buttonDiv" (click)="addIngredient()"><i class="fa fa-plus" aria-hidden="true"></i></div>
     </div>
     <div class="wrapperDiv">
-    <div class="buttonDiv" (click)="closeEditRecipe()">CloseEdit</div>
-    <div class="buttonUpdate" (click)="updateRecipe()">Update</div>
+    <div class="buttonDiv" id="closeEdit" (click)="closeEditRecipe()">CloseEdit</div>
+    <div class="buttonDiv" (click)="updateRecipe()">Update</div>
     </div>
 </div>
