--- a/src/app/components/edit-recipe/edit-recipe.component.scss
+++ b/src/app/components/edit-recipe/edit-recipe.component.scss
@@ -1,8 +1,9 @@
 .buttonDiv{
-    margin-left: 30px;
+  
     display: inline-block;
     height: 30px;
     width: 30px;
+    padding: 30px;
 }
 .buttonDiv:hover{
     cursor: pointer;
