--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,12 @@
 .second{
     margin-left: 8vw;
 }
+.buttonDiv{
+    padding: 30px;
+    display: inline-block;
+    height: 30px;
+    width: 180px;
+}
+.buttonDiv:hover{
+    cursor: pointer;
+}
