--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,5 +15,6 @@
       <app-edit-recipe *ngIf="showTheRecipe==false" [(currentRecipe)]="selectedRecipe" (showRecipe)="showMyRecipe($event)"></app-edit-recipe>      
     </div>
 </div>
+<div class="buttonDiv" (click)="openAddRecipeDialog()">Add new Recipe</div>
 
 <router-outlet></router-outlet>
