--- a/src/app/add-recipe-dialog/add-recipe-dialog.component.html
+++ b/src/app/add-recipe-dialog/add-recipe-dialog.component.html
@@ -1,2 +1,53 @@
-<app-edit-recipe [currentRecipe]="currentRecipe" ></app-edit-recipe>
-<div class="buttonDiv" (click)="saveNewRecipe()">Save Recipe</div>
+<!-- <app-edit-recipe [currentRecipe]="currentRecipe" ></app-edit-recipe> -->
+
+
+<div *ngIf="currentRecipe">
+    <mat-form-field>
+        <mat-label>Name: </mat-label>
+        <input matInput [(ngModel)]="currentRecipe.name" />
+    </mat-form-field>
+</div>
+
+<div *ngIf="currentRecipe">
+    <mat-form-field>
+        <mat-label>Description: </mat-label>
+        <textarea matInput [(ngModel)]="currentRecipe.description" > </textarea>
+    </mat-form-field>
+</div>
+
+<div *ngIf="currentRecipe">
+    <div *ngFor="let recipeIngredient of currentRecipe.ingredients" class="editContaier">
+        
+         <mat-form-field>
+            <mat-select matNativeControl [(value)]="recipeIngredient.ingredientId">
+                <mat-option *ngFor="let ingredient of ingredients" [(value)]="ingredient.id">
+                    {{ingredient.name}}  </mat-option>
+            </mat-select>
+        </mat-form-field>
+
+        <mat-form-field> 
+            <mat-label>Quantity: </mat-label>
+            <input matInput [(ngModel)]="recipeIngredient.quantity"/>
+        </mat-form-field>
+    
+            <div class="buttonDiv" (click)="removeIngredient(recipeIngredient.ingredient)"><i class="fa fa-times" area-hidden="true"></i></div>
+    </div>
+</div>
+
+<mat-divider id="matDivider"></mat-divider>
+<br>
+
+<div class="addContainer">
+    <mat-form-field >
+        <mat-select [(value)]="currentIngredient.ingredient">
+            <mat-option *ngFor="let ingredient of ingredients" [value]="ingredient"> {{ingredient.name}}  </mat-option>
+        </mat-select>
+    </mat-form-field> 
+    <mat-form-field>
+        <mat-label>Quantity: </mat-label>
+        <input matInput type="number" [(ngModel)]="currentIngredient.quantity" />
+    </mat-form-field>
+        <div class="buttonDiv" (click)="addIngredient()"><i class="fa fa-plus" area-hidden="true"></i></div>
+</div>
+
+<button color="primary" mat-raised-button id="buttonSaveRecipe" (click)="saveNewRecipe()">Save</button>
