--- a/src/app/components/edit-recipe/edit-recipe.component.html
+++ b/src/app/components/edit-recipe/edit-recipe.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="currentRecipe">
     <mat-form-field>
         <mat-label>Name: </mat-label>
-        <input matInput [(ngModel)]="currentRecipe.name" >
+        <input matInput [(ngModel)]="currentRecipe.name" />
     </mat-form-field>
 </div>
 
@@ -18,37 +18,41 @@
     <div *ngIf="currentRecipe">
         <div *ngFor="let recipeIngredient of currentRecipe.ingredients" class="editContaier">
             
-            <mat-form-field value="recipeIngredient">
-                <mat-select *ngIf="ingredients" [(value)]="recipeIngredient.ingredientId">
-                    <mat-option *ngFor="let ingredient of ingredients" [value]="ingredient.id">
+             <mat-form-field>
+                <mat-select matNativeControl [(value)]="recipeIngredient.ingredientId">
+                    <mat-option *ngFor="let ingredient of ingredients" [(value)]="ingredient.id">
                         {{ingredient.name}}  </mat-option>
                 </mat-select>
-            </mat-form-field>     
+            </mat-form-field>
+    
             <mat-form-field> 
                 <mat-label>Quantity: </mat-label>
-                <input matInput [(ngModel)]="recipeIngredient.quantity">
+                <input matInput [(ngModel)]="recipeIngredient.quantity"/>
             </mat-form-field>
-                <div class="buttonDiv" (click)="removeIngredient(recipeIngredient.ingredient)"><i class="fa fa-times" aria-hidden="true"></i></div>
+        
+                <div class="buttonDiv" (click)="removeIngredient(recipeIngredient.ingredient)"><i class="fa fa-times" area-hidden="true"></i></div>
         </div>
+    </div>
 
 
-
-    <mat-divider></mat-divider>
+    <mat-divider id="matDivider"></mat-divider>
     <br>
     <div class="addContainer">
         <mat-form-field >
-            <mat-select *ngIf="ingredients" [(value)]="currentIngredient.ingredient">
+            <mat-select [(value)]="currentIngredient.ingredient">
                 <mat-option *ngFor="let ingredient of ingredients" [value]="ingredient"> {{ingredient.name}}  </mat-option>
             </mat-select>
         </mat-form-field> 
-        <mat-form-field *ngIf="ingredients">
+        <mat-form-field>
             <mat-label>Quantity: </mat-label>
-            <input matInput [(ngModel)]="currentIngredient.quantity" >
+            <input matInput type="number" [(ngModel)]="currentIngredient.quantity" />
         </mat-form-field>
-            <div class="buttonDiv" (click)="addIngredient()"><i class="fa fa-plus" aria-hidden="true"></i></div>
+            <div class="buttonDiv" (click)="addIngredient()"><i class="fa fa-plus" area-hidden="true"></i></div>
     </div>
+
     <div class="wrapperDiv">
-    <div class="buttonDiv" id="closeEdit" (click)="closeEditRecipe()">CloseEdit</div>
-    <div class="buttonDiv" (click)="updateRecipe()">Update</div>
-    </div>
+    <button color="primary" mat-raised-button class="buttonDiv" id="closeEdit" (click)="closeEditRecipe()">Close</button>
+    <button color="primary" mat-raised-button  class="buttonDiv" id="update" (click)="updateRecipe()">Update</button>
+    </div>  
+
 </div>
