--- a/src/app/components/show-recipe/show-recipe.component.html
+++ b/src/app/components/show-recipe/show-recipe.component.html
@@ -6,6 +6,7 @@
         </mat-card-header>
         <mat-divider></mat-divider>
         <div id="description">Decription: {{recipe.description}}</div>
+        <mat-divider id="matDividerDescription"></mat-divider>
         <mat-list>
             <mat-list-item *ngFor="let ingredient of recipe.ingredients">
                 <div class="group">
