--- a/src/app/components/show-recipe/show-recipe.component.html
+++ b/src/app/components/show-recipe/show-recipe.component.html
@@ -19,7 +19,7 @@
                 </div>
             </mat-list-item>
         </mat-list>
-        <button color="primary" mat-raised-button class="buttonDiv"(click)="changeToEditMode()">Edit</button>
+        <button color="primary" mat-raised-button class="buttonDiv2"(click)="changeToEditMode()">Edit</button>
     </mat-card>
     </div>
 </div>
